--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ src/main/resources/docs/
 bin/
 
 # java spectific binaries
-.class
+*.class
 
 /text-ui-test/ACTUAL.TXT
 text-ui-test/EXPECTED-UNIX.TXT
